--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Tell Space Feedback
+description: Tell Space Feedback Website. Tell us what you think about our services.
