--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-midnight
 title: Tell Space Feedback
 description: Tell Space Feedback Website. Tell us what you think about our services.
