--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: Tell Space Feedback
-description: Tell Space Feedback Website. Tell us what you think about our services.
+title: Tell Space &#124; Feedback
+description: Tell Space Feedback. Tell us what you think about our services.
